--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Notebook CPs
+.ipynb_checkpoints
+notebooks/.ipynb_checkpoints
+data/.ipynb_checkpoints
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
